implicit_input_mode_Select

--- a/CNN/tester/PerformanceTable.css
+++ b/CNN/tester/PerformanceTable.css
@@ -47,7 +47,7 @@ tr:hover {
   background-color: darkgrey;
 } */
 
-input, textarea {
+input, textarea, select {
   background-color: black;
   color: lightgrey;
   width: 100%;
